--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+kakao.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +37,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+# local env files
+**/.env.local
+**/.env.*.local
