refactor : 일부 수정과 checkout 을 위한 커밋

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,15 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         #        show_sql: true
         format_sql: true
         default_batch_fetch_size: 1000
+
+  profiles:
+    include: oauth
 
 logging:
   level:
