feat/kakao, feat/book 병합

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+application-oauth.properties
+kakao.properties
+generated
+
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +39,11 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+# local env files
+**/.env.local
+**/.env.*.local
+
+properties
+application-local.yml
