--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,7 @@ repositories {
 }
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -32,8 +30,8 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
-//	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
-//	implementation 'org.jsoup:jsoup:1.14.2'
+	implementation 'io.lettuce:lettuce-core:5.3.3.RELEASE'
+
 
 
 	compileOnly 'org.projectlombok:lombok'
