--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
+	id 'jacoco'
 }
 
 group = 'com.project'
@@ -47,11 +48,67 @@ dependencies {
 
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	annotationProcessor 'org.projectlombok:lombok'
-
 }
+
 
 test {
 	useJUnitPlatform()
+	finalizedBy 'jacocoTestReport'
+}
+
+jacoco {
+	toolVersion = "0.8.8"
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		csv.enabled true
+		html.enabled true
+
+		xml.destination file("${buildDir}/jacoco/index.xml")
+		csv.destination file("${buildDir}/jacoco/index.csv")
+		html.destination file("${buildDir}/jacoco/index.html")
+
+		afterEvaluate {
+			classDirectories.setFrom(files(classDirectories.files.collect {
+				fileTree(dir: it, exclude: [
+						'**/Q*',
+						'**/*Application*',
+						'**/GlobalExceptionHandler*',
+						'**/BaseEntity*',
+						'**/*Exception*',
+						'**/common/config/**',
+						'**/Healthcontroller*',
+						'**/book/dto/**',
+						'**/member/dto/**',
+				])
+			}))
+		}
+
+		finalizedBy 'jacocoTestCoverageVerification'
+	}
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			enabled = true
+			element = "CLASS"
+
+			excludes =  [
+					'*.Q*',
+					'*.*Application',
+					'*.GlobalExceptionHandler',
+					'*.BaseEntity',
+					'*.*Exception',
+					'*.common.config.*',
+					'*.Healthcontroller',
+					'*.book.dto.*',
+					'*.member.dto.*',
+			]
+		}
+	}
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
@@ -60,6 +117,12 @@ querydsl {
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
+
+compileQuerydsl.doFirst {
+	if(file(querydslDir).exists() )
+		delete(file(querydslDir))
+}
+
 sourceSets {
 	main.java.srcDir querydslDir
 }
